deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment2
  labels:
    app: deployment2
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crud-2
  template:
    metadata:
      labels:
        app: crud-2
    spec:
      containers:
      - name: crud
        image: kubernetesguruhk/crud
        ports:
        - containerPort: 8080
^G Get Help     ^O Write Out    ^W Where Is     ^K Cut Text     ^J Justify      ^C Cur Pos      M-U Undo
^X Exit         ^R Read File    ^\ Replace      ^U Uncut Text   ^T To Spell     ^_ Go To Line   M-E Redo
