service2.yaml
kind: Service
apiVersion: v1
metadata:
  name: service2
  namespace: default
spec:
  selector:
    app: crud-2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP





















                                                [ Read 13 lines ]
^G Get Help     ^O Write Out    ^W Where Is     ^K Cut Text     ^J Justify      ^C Cur Pos      M-U Undo
^X Exit         ^R Read File    ^\ Replace      ^U Uncut Text   ^T To Spell     ^_ Go To Line   M-E Redo


















                                                [ Read 13 lines ]
^G Get Help     ^O Write Out    ^W Where Is     ^K Cut Text     ^J Justify      ^C Cur Pos      M-U Undo
^X Exit         ^R Read File    ^\ Replace      ^U Uncut Text   ^T To Spell     ^_ Go To Line   M-E Redo
