ingress1.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: service1.activematching.com
    http:
      paths:
      - path: /
        backend:
          serviceName: service1
          servicePort: 80
  - host: service2.activematching.com
    http:
      paths:
      - path: /
        backend:
          serviceName: service2
          servicePort: 80











                                                [ Read 23 lines ]
^G Get Help     ^O Write Out    ^W Where Is     ^K Cut Text     ^J Justify      ^C Cur Pos      M-U Undo
^X Exit         ^R Read File    ^\ Replace      ^U Uncut Text   ^T To Spell     ^_ Go To Line   M-E Redo
